# mnist-svd-subspace-failure

./: .gitignore  README.md  app.py  get_metrics.py  project proposal.md  pyproject.toml  requirements.txt
experiments/: 01_accuracy_curve.py  01_confusion.py  02_leakage_correlation.py  02_residual_heatmap.py  03_centered_spectrum.py  03_subspace_geometry.py  04_gap_direction.py  04_robustness_benchmark.py  05_substitution.py
report/: main.tex  references.bib
results/: compile_summary.py  stage4a_rho_values.csv  stage5_confusion_delta.csv  summary.csv
src/: angle_sequences.py  baselines.py  centered_svd.py  classifier.py  cnn_model.py  data_loader.py  data_preparation.py  mnist_logic.py  plotting.py  principal_angles.py  spectrum_analysis.py  style_utils.py  subspace_analysis.py  subspace_geometry.py  svd_basis.py  svd_classifier.py
