[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist-svd-analysis"
version = "0.1.0"
description = "Geometric Analysis of SVD Subspace Classifiers on MNIST"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "torch",
    "torchvision"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
