[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist-svd-analysis"
version = "0.1.0"
description = "Geometric Analysis of SVD Subspace Classifiers on MNIST"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2",
    "scipy>=1.11,<2",
    "matplotlib>=3.7,<4",
    "scikit-learn>=1.3,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
